# openbb-orats

./: .gitignore  README.md  pyproject.toml  temp.ipynb
openbb_orats/: __init__.py  provider.py  router.py
openbb_orats/models/: example.py  tickers.py
